re PR c++/9791 (-Woverloaded-virtual reports hiding of destructor)

PR c++/9791
	* class.c (get_basefndecls): Use lookup_fnfields_1.

	PR c++/9791
	* g++.dg/warn/Woverloaded-1.C: New test.

From-SVN: r63901